test/trivial/deitz/test_bad_if.chpl
var f = 0.0;

if f then
  writeln("if on real is illegal 1");
else
  writeln("if on real is illegal 2");
